bodhilibrs_frompyo3/tests/ui/error-unsupported-struct-attr-multiple.stderr
error: Multiple attributes not supported
 --> tests/ui/error-unsupported-struct-attr-multiple.rs:5:1
  |
5 | #[frompyo3(foo = "bar")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^

error: Multiple attributes not supported
 --> tests/ui/error-unsupported-struct-attr-multiple.rs:6:1
  |
6 | #[frompyo3(baz = "caz")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
